--- a/idex.html
+++ b/idex.html
@@ -8,6 +8,8 @@
     <title>ironhack index - welcome</title>
 </head>
 <body>
-    hdgsfjgdfjh
+    <div>Header</div>
+    <div>content</div>
+    <div>Footer</div>
 </body>
 </html>
