--- a/idex.html
+++ b/idex.html
@@ -8,8 +8,17 @@
     <title>ironhack index - welcome</title>
 </head>
 <body>
-    <div>Header</div>
+    <!-- header // start -->
+    <div>
+        logo
+        <img src="logofile.jpg" alt="">
+        <menu></menu>
+        Menu
+    </div>
+
+
     <div>content</div>
+
     <div>Footer</div>
 </body>
 </html>
